# LangGraph-Agent-System

./: .clineignore  .clinerules  .dockerignore  .env.example  .gitignore  .gitignore.backup.s5  AI_ONBOARDING_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT_SUMMARY.md  CONTRIBUTING.md  Dockerfile  HUONG_DAN_SU_DUNG.md  INSTRUCTIONS.md  Learn_Code_Now.bat  Prepare_Gemini.bat  README.md  Sovereign_WILL.md  VN_Style_Preset.json  WHITE_PAPER_JARVIS.md  context_for_gemini.txt  dashboard.py  diff.txt  docker-compose.yml  export_project_clean.bat  fix_encoding.py  generated_world_card_test.json  handoff.txt  mkdocs.yml  monorepo_manifest.json  pyproject.toml  recover_all_from_history.py  recover_vsc.py  requirements.in  requirements.txt  run.bat  run_all.bat  run_ceo_morning_routine.bat  run_clothoff.bat  run_dashboard.bat  (+17 more)
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
_archive_old_files/: Node.py  auto_scrape.bat  baitapExcel.py  createdocx.py  graph.py  group_lorebook.py  state.py
config/: api_registry.json
context/: ACTIVE  ACTIVE_THOUGHTS.md  ARCHITECTURE.md  DEBATE_ROOM.md  GLOBAL_STATE.md  HANDOVER_FOR_CEO.md  JARVIS_CHRONICLES.md  REFLECTIONS_AND_EVOLUTION.md  ROADMAP.md  SYSTEM_LORE.md
context/_archive/: AI_Interaction_Capability_Assessment.md  DEBATE_ROOM_20260707_235039.md  GRAND_ARENA_EVALUATION.md  daily_health_test_results.md
context/model_handoff/: BLIND_MODEL_TEST.md  DEBATE_ROOM.md  GEMINI_3_1_PRO_MEMORY.md  GLM_5_2_MEMORY.md  HANDOFF_TEMPLATE
context/roles/: architect_memory.md  ceo_audit_report.md  ceo_memory.md  (+6 more)
core/: drm_validator.c  drm_validator.py  logic_auditor.py  mental_sandbox.py  post_mortem_engine.py  principles_enforcer.py  process_watchdog.py
core_utilities/: backup_manager.py  http_client.py  image_utils.py  logger.py  notification_gateway.py  obfuscator.py  process_watchdog.py  safe_file_manager.py  self_healing.py
data/: free_models_map.json
docs/: AGENT_EVOLUTION_STANDARDS.md  BUG_REPORT_2026_06_28.md  CLINE_TASK_INDEX.md  ERROR_ENCYCLOPEDIA.md  GLOBAL_FUNCTION_REGISTRY.md  Guide_Viet_TinhHoa.md  JARVIS_CHRONICLES.md  PENDING_TECH_DEBT.md  PROJECT_TRACKER.md  RAG_QUERY_TEMPLATES.md  REFACTOR_PLAN_V5.1.md  RELEASE_STANDARDS.md  ROADMAP.md  ROADMAP_AI_BACKUP_OPTIONS.md  ROADMAP_AI_ENGINEER.md  ROADMAP_DATA_DEV.md  ROADMAP_DL_STOCK_THESIS.md  SOVEREIGN_CONTEXT_PLAN.md  SOVEREIGN_MANAGEMENT_STANDARDS.md  SOVEREIGN_READING_LIST.md  SOVEREIGN_RFC_PROCESS.md  SOVEREIGN_UPGRADE_PLAN.md  SYSTEM_IMPROVEMENT_QUESTS.md  SYSTEM_MAP.md  TRADING_AGENT_ARCHITECTURE.md  WEB_DASHBOARD_GUIDE.md  index.md
nginx/: nginx.conf
openwiki/: CODEBASE_WIKI.md
projects/: __init__.py
projects/gemini_cli/: .env.example  .gitignore  README.md  TEST_GUIDE.md  main.py  pyproject.toml  run_demo.bat
projects/gemini_cli/core/: __init__.py  client.py  config.py
projects/gemini_cli/tests/: __init__.py
projects/godot_translator/: .clinerules  app.py  build_godot_exe.py  main.py  main_run.py  pyproject.toml  run.bat  test_translation.py
projects/godot_translator/core/: cyber_security.py  decompiler.py  extractor.py  gdre_downloader.py  injector.py  pack_manager.py  translator.py
projects/godot_translator/utils/: ui_helper.py
projects/local_proxy_server/: .env.example  APIKEYFREE.md  README.md  main.py  pyproject.toml  start_server.bat
projects/local_proxy_server/core/: adapter.py  config.py  rotation_manager.py  router.py
projects/local_proxy_server/tests/: test_proxy.py  test_proxy_server.py
projects/minecraft_eden_simulation/: .clinerules  README.md  pyproject.toml
projects/minecraft_eden_simulation/src/: simulation_runner.py  telemetry.py
projects/minecraft_eden_simulation/src/agents/: eden_player.py  memory_module.py
projects/minecraft_eden_simulation/src/world_engine/: grid_map.py  tech_tree.py
projects/real_execution_simulator/: .clinerules  agent.py  buggy_script.py  main.py  pyproject.toml  tools.py
reports/: AGENT_PERFORMANCE_2026_07_08.md  AI_ENGINEERING_MATURITY_MODEL.md  API_BENCHMARK_REPORT.md  CEO_PERFORMANCE_AUDIT_2026_07_07.md  CEO_SIMULATOR_REPORT_2026_07_09.md  CHAOS_AUDIT_2026_07_20.md  DOC_DEBATE_ANALYSIS.md  FUNCTION_PERFORMANCE_AUDIT.md  GLOBAL_AI_SIMULATOR_BENCHMARK.md  MARKETING_INSIGHTS_REPORT.json  MCP_UTILIZATION_STRATEGY.md  MONETIZATION_PERFORMANCE_REPORT.md  MONOREPO_HEALTH_AUDIT.md  PROJECT_STATISTICS_REPORT.md  Q3_STRATEGIC_PLAN.md  Q4_STRATEGIC_PLAN.md  SELF_EVOLUTION_V2_PROPOSAL.md  SIMULATOR_EVALUATION.md  SOVEREIGN_ARCH_MAP.md  SOVEREIGN_ASSET_AUDIT.md  SOVEREIGN_MATURITY_ASSESSMENT.md  SYSTEM_VULNERABILITY_LOG.md  User_Input_Analysis_1772380714655.md  WORKFLOW_EVALUATION_REPORT.md  code_health_report.json  compliance_violations.json  log_analysis.md
scheduler/: drip_feed_worker.py  main_scheduler.py  test_catchup.py
scripts/: run_airdrop_onchain.bat  run_daily_routine.py  start_scheduler.bat
src/: __init__.py  api_gateway.py  base_agent.py  database.py  pyproject.toml  resume_flow.py  token_tracker.py
tests/: conftest.py  test_advanced_rag_flow.py  test_all_roles_gcli.py  test_api_keys.py  test_async_test_nodes.py  test_base_agent.py  test_base_agent_fixes.py  test_binance_executor.py  test_context_compressor.py  test_daily_loop.py  test_generate_ppt_report.py  test_groq_stream.py  test_llm.py  test_local_proxy.py  test_merge_regex.py  test_rag_card_agent.py  test_resilience.py  test_scheduler  test_scheduler_fixes.py  test_security_hardening.py  test_shadow_sentinel.py  test_token_tracker.py  test_trading_agent.py  test_validation_gate.py  test_watchdog.py
tmp/: memory_leak_test.py
tools/: build_all_reqs.py  compile_drm.py  convert_csv_to_data.py  convert_data_to_csv.py  extract_cookies.py  extract_godot_csv.py  generate_flagship_roadmap.py  manage.py  market_research_scraper.py  package_beta.py  pyproject.toml  run_notebooks.py  run_pipeline_data.py  run_pipeline_lstm.py  run_pipeline_ml.py  run_qa_agent.py  run_tester_agent.py  scan_results.txt  scrape_opgg.py  setup_project_foundation.py  system_cleaner.py  telegram_bot_controller.py  test_youtube_api.py  translate_csv.py
(+1033 files in other folders)
