[project]
name = "godot_translator"
version = "0.1.0"
description = "A subproject to translate Godot games using LLMs"
authors = [{ name = "Cline", email = "cline@langgraph.agent" }]
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
