[project]
name = "minecraft-eden-simulation"
version = "0.1.0"
description = "A simulated LangGraph environment for testing AI survival logic before Minecraft integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "colorama>=0.4.6",
    "chromadb>=0.4.20",
    "langchain-huggingface>=0.0.1",
]
