[project]
name = "real_execution_simulator"
version = "0.1.0"
description = "Agent Thực Chiến (Real Execution Simulator) có khả năng Tool Calling chạy Terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.1",
    "langchain-core>=0.3.5",
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.22",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "colorama>=0.4.6",
]
